@@ -1,5 +1,8 @@
 2006-12-15  Eric Hodel  <drbrain@segment7.net>
 
+	* lib/rubygems/installer.rb (Gem::Uninstaller): Correctly uninstall
+	executables if GEM_HOME is set.  Patch #2264 by Sylvain Joyeux.
+
 	* lib/rubygems.rb (Gem::loaded_specs): Expose list of currently loaded
 	gems.
 
